# wm3D

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml  vision_utils.cpp
cmake/: Findtinyobjloader.cmake
common/include/perception_utils/: gbuffer.h  shader.h  texture_mesh.h  view_generator.h  vision_utils.hpp  visualizer.hpp
common/include/perception_utils/utility/: gl_helper.hpp  open3d_helper.hpp  vision_utils.hpp
common/src/: gbuffer.cpp  view_generator.cpp  vision_utils.cpp  visualizer.cpp
common/src/utility/: gl_helper.cpp  open3d_helper.cpp  vision_utils.cpp
cuda/: CMakeLists.txt  cuda_headers.hpp
cuda/include/cuda/: cuda_headers.hpp
cuda/include/cuda/camera/: camera_intrinsic_cuda.hpp
cuda/include/cuda/common/: common.hpp  helper_cuda.h  helper_string.h  operators.cuh  type_conversions.hpp  utils_cuda.hpp
cuda/include/cuda/container/: convenience.cuh  device_array.hpp  device_array_impl.hpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp
cuda/include/cuda/geometry/: img_proc.hpp  triangle_mesh_cuda.hpp
cuda/include/cuda/integration/: marching_cubes_cuda.hpp  marching_cubes_table_cuda.hpp  tsdf_volume_cuda.hpp  tsdf_volume_cuda_kernel.cuh
cuda/src/container/: device_memory.cpp
cuda/src/geometry/: img_proc.cu  imgproc.cu__  triangle_mesh_cuda.cpp  triangle_mesh_cuda.cu
cuda/src/integration/: cv_tsdf_volume.cu  marching_cubes_cuda_kernel.cu  tsdf_volume.cu  tsdf_volume_cuda.cu  tsdf_volume_cuda_host.cpp  tsdf_volume_cuda_kernel.cu
data/: config.json  config.yaml  frame-000000.pose.txt  frame-000001.pose.txt  frame-000002.pose.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000006.pose.txt  frame-000007.pose.txt  frame-000008.pose.txt  frame-000009.pose.txt  frame-000010.pose.txt  frame-000011.pose.txt  frame-000012.pose.txt  frame-000013.pose.txt  frame-000014.pose.txt  frame-000015.pose.txt  frame-000016.pose.txt  frame-000017.pose.txt  frame-000018.pose.txt  frame-000019.pose.txt  frame-000020.pose.txt  frame-000021.pose.txt  frame-000022.pose.txt  frame-000023.pose.txt  frame-000024.pose.txt  frame-000025.pose.txt  frame-000026.pose.txt  frame-000027.pose.txt  frame-000028.pose.txt  frame-000029.pose.txt  frame-000030.pose.txt  frame-000031.pose.txt  frame-000032.pose.txt  frame-000033.pose.txt  frame-000034.pose.txt  frame-000035.pose.txt  frame-000036.pose.txt  frame-000037.pose.txt  (+43 more)
data1/: polygon_mesh.ply  textured.mtl
elibs/: CMakeLists.txt
elibs/tinyobjloader/: loader_example.cc  tiny_obj_loader.h
elibs/tinyobjloader/examples/callback_api/: main.cc
elibs/tinyobjloader/examples/obj_sticher/: obj_sticher.cc  obj_writer.cc  obj_writer.h
elibs/tinyobjloader/examples/viewer/: stb_image.h  trackball.cc  viewer.cc
elibs/tinyobjloader/examples/voxelize/: main.cc  voxelizer.h
elibs/tinyobjloader/experimental/: tinyobj_loader_opt.h  trackball.cc  viewer.cc
elibs/tinyobjloader/experimental/lfpAlloc/: Allocator.hpp  ChunkList.hpp  Pool.hpp  PoolDispatcher.hpp  Utils.hpp
elibs/tinyobjloader/python/: bindings.cc
elibs/tinyobjloader/src/tinyobjloader-stamp/: tinyobjloader-gitclone-lastrun.txt
elibs/tinyobjloader/tests/: acutest.h  tester.cc
elibs/tinyobjloader/tmp/: tinyobjloader-gitclone.cmake
include/wm3D/: texture_mesh.h  view_control.h  visualizer.hpp
include/wm3D/camera/: camera_intrinsic.hpp
include/wm3D/cuda/: cuda_headers.cuh  data_types.cuh  device_array_impl.hpp  kernel_containers.hpp  operators.cuh  tsdf_volume_cuda.h
include/wm3D/cuda/common/: common.h  utils_cuda.h
include/wm3D/integration/: marching_cubes_table.hpp  tsdf_volume.hpp
include/wm3D/utility/: gl_helper.hpp  open3d_helper.hpp  utils.hpp  vision_utils.hpp
include/wm3D/visualization/: gbuffer.h  gl_util.h  render_texture_mesh.hpp  shader.h  visualizer.hpp
python/: open3d_examples.py  torch3d.py  torch_example.py  torch_test1.py
python/config/: rendering_config.yaml
python/renderer/: common.py  main.py  texture_mesh_renderer.py
sample_data/: config.json  polygon_mesh.ply
sample_data/pc_result1/: BB.txt  frame-20cloud.ply  frame-34cloud.ply  frame-41cloud.ply  frame-6cloud.ply  frame-7cloud.ply
sample_data/pc_results/: BB.txt  frame-13cloud.ply  frame-14cloud.ply  frame-27cloud.ply  frame-28cloud.ply  frame-35cloud.ply  results_intrinsic.txt  results_pt_odo.txt
script/: .gitignore  install-deps-linux.sh
src/: gbuffer.cpp  mesh_rgbd_rendering.cpp  open3d_test.cpp  view_control.cpp  view_generator.cpp  viewer.cc  visualizer.cpp
src/camera/: camera_intrinsic.cpp
src/cuda/: imgproc.cu  tsdf_volume.cu  tsdf_volume_cuda.cu
src/integration/: tsdf_volume.cpp
src/shaders/: rendermode.frag  rendermode.vert  savemode.frag  savemode.vert
src/utility/: gl_helper.cpp  open3d_helper.cpp  vision_utils.cpp
src/visualization/: render_texture_mesh.cpp
test/: cuda_test.cpp  function_test.cpp  mesh_rgbd_rendering.cpp  opengl_test.cpp  triangle_mesh_cuda_test.cpp
