<?xml version="1.0"?>
<package format="3">
  <name>wm3D</name>
  <version>0.0.1</version>
  <description>A package contains vision and graphics algorithms </description>
  <author email="manh.ha.hoang@ipa.fraunhofer.de">Manh-Ha Hoang</author>
  <maintainer email="manh.ha.hoang@ipa.fraunhofer.de">Manh-Ha Hoang</maintainer>	
 #TODO
  <license>MIT</license>
    	<depend>roscpp</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
